# shortuuid

./: .pre-commit-config.yaml  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
shortuuid/: __init__.py  cli.py  django_fields.py  main.py  test_optimizations.py  test_shortuuid.py  verify_optimizations.py
