[tool.poetry]
name = "shortuuid"
version = "2.0.0"
description = "A generator library for concise, unambiguous and URL-safe UUIDs."
license = "BSD-3-Clause"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/skorokithakis/shortuuid/"
authors = ["Stavros Korokithakis <hi@stavros.io>"]
readme = "README.md"
include = [
  { path = "COPYING", format = "sdist" }
]

[tool.poetry.scripts]
shortuuid = "shortuuid.cli:cli"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "DTZ",   # flake8-datetimez (timezone-aware datetimes)
    "UP",    # pyupgrade (enforces modern syntax)
    "PTH",   # flake8-use-pathlib
    "I",     # isort
    "SIM",   # flake8-simplify
    "PERF",  # perflint (performance)
    "YTT",   # flake8-2020
]
ignore = []

[tool.pydocstyle]
# D212 and D213 are mutually exclusive - we use D212 (summary on first line)
ignore = ["D213"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
